# tao

./: CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.in  tao_synth-config.cmake.in
.github/workflows/: ubuntu_18_04.yml  ubuntu_20_04.yml
doc/ClassReference/: tao.doxy.cnf.in
doc/UserManual/: installation.tex
doc/UserManual/html/: UserManual_15.html
examples/: 40strings.cpp  40strings.tao  CMakeLists.txt  accesspoint1.cpp  accesspoint2.cpp  bow.cpp  circle.cpp  circle2.cpp  connector.cpp  damp.cpp  diffraction.cpp  ellipse.cpp  ellipse2.cpp  hammer.cpp  lock.cpp  outputarray.cpp  outputs.cpp  pitches.cpp  rectangle.cpp  rectangle2.cpp  stop.cpp  strand.cpp  string.cpp  stringt.cpp  testt.cpp
include/: Tao.h  TaoBow.h  TaoCell.h  TaoCircle.h  TaoConnector.h  TaoDevice.h  TaoEllipse.h  TaoHammer.h  TaoInstrument.h  TaoOutput.h  TaoRGBColor.h  TaoRectangle.h  TaoStop.h  TaoString.h  TaoTriangle.h  taodefs.h  test.cc
include/tao/: access_point.h  bow.h  cell.h  circle.h  connector.h  device.h  ellipse.h  graphics_engine.h  hammer.h  instrument.h  manager.h  output.h  pitch.h  rectangle.h  rgb_color.h  stop.h  strand.h  synth_engine.h  tao.h  taodefs.h  triangle.h
libtao/: CMakeLists.txt  Tao.cc  TaoAccessPoint.cc  TaoBow.cc  TaoCell.cc  TaoCircle.cc  TaoConnector.cc  TaoDevice.cc  TaoEllipse.cc  TaoGraphicsEngine.cc  TaoHammer.cc  TaoInstrument.cc  TaoOutput.cc  TaoPitch.cc  TaoRectangle.cc  TaoStop.cc  TaoString.cc  TaoSynthEngine.cc  TaoTriangle.cc  access_point.cpp  bow.cpp  cell.cpp  circle.cpp  connector.cpp  device.cpp  ellipse.cpp  graphics_engine.cpp  hammer.cpp  instrument.cpp  manager.cpp  output.cpp  pitch.cpp  rectangle.cpp  stop.cpp  strand.cpp  synth_engine.cpp  tao.cpp  triangle.cpp
tao2aiff/: tao2aiff.cc
tao2wav/: audiofile.h  aupvlist.h  tao2wav.cc  tao2wav.h
tao_synth_ros/: CMakeLists.txt  package.xml
tao_synth_ros/config/: tao_synth.rviz
tao_synth_ros/launch/: demo.launch
tao_synth_ros/msg/: Force.msg  Instrument.msg  Output.msg  Stop.msg
tao_synth_ros/scripts/: guitar.py  guitar_setup.py
tao_synth_ros/src/: tao_synth.cpp
tao_synth_ros/srv/: AddAssembly.srv  AddInstrument.srv
taoparse/: taoparser.yy
user-scripts/: taosf
